<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Intouch</string>
    <string name="login_fragment_title">Accedi</string>
    <string name="create_account_fragment_title">Crea account</string>
    <string name="start_fragment_title">Scegli i tuoi gusti</string>
    <string name="feed_title">Il tuo feed</string>
    <string name="search_title">Cerca</string>
    <string name="categories_title">Categorie</string>
    <string name="profile_title">Profilo</string>
    <string name="add_event_title">Crea evento</string>
    <string name="friendship_requests_title">Richieste d\'amicizia</string>
    <string name="user_friends_activity">Amici</string>
    <string name="event_joined_activity">Eventi partecipati</string>
    <string name="event_created_activity">Eventi creati</string>
    <string name="user_edit_title">Modifica profilo</string>
    <string name="action_login_short">Accedi</string>
    <string name="action_create_account_short">Registrati</string>
    <string name="action_save_changes_form">Salva</string>
    <string name="retry">Riprova</string>
    <string name="close_dialog">Chiudi</string>
    <string name="availableWarning">La disponibilità non può essere modificata dopo aver creato l\'evento</string>
    <string name="search_query_hint_text">Cerca @utenti o eventi</string>
    <string name="action_recover_password">Password dimenticata?</string>
    <string name="action_reset_password">Cambia password</string>
    <string name="intro_text">Regalati momenti indimenticabili con i tuoi amici.</string>
    <string name="or">oppure</string>
    <string name="login_description">Inserisci le credenziali per recuperare l\'accesso al tuo account.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_username">Nome utente</string>
    <string name="prompt_biography">Biografia</string>
    <string name="prompt_location_distance">Mostrami eventi entro</string>
    <string name="prompt_repeat_password">Ripeti password</string>
    <string name="prompt_birthdate">Data di nascita</string>
    <string name="prompt_description">Descrizione</string>
    <string name="prompt_name_event">Nome evento</string>
    <string name="prompt_city">Città</string>
    <string name="time_picker_title">Imposta un orario</string>
    <string name="event_already_updated">L\'evento è già aggiornato.</string>
    <string name="prompt_address">Indirizzo</string>
    <string name="prompt_available">Posti disponibili</string>
    <string name="prompt_geo">Località</string>
    <string name="prompt_event_startAt">Inizio</string>
    <string name="prompt_event_endAt">Fine</string>
    <string name="prompt_restricted_event">Solo per gli amici</string>
    <string name="prompt_event_image">Aggiungi immagine</string>
    <string name="prompt_event_edit_image">Modifica immagine</string>
    <string name="add_geo_picker_button">Modifica posizione</string>
    <string name="prompt_category">Categoria</string>
    <string name="prompt_startAt_title">Data inizio</string>
    <string name="prompt_endAt_title">Data di fine (opzionale)</string>
    <string name="prompt_date_event">Data</string>
    <string name="prompt_time_event">Orario</string>
    <string name="create_event_title">Crea evento</string>
    <string name="edit_event_title">Modifica evento</string>
    <string name="text_gdpr_consent">Effettuando l\'iscrizione accetti il <br></br> <![CDATA[<a href="https://www.iubenda.com/privacy-policy/8207462/full-legal">Trattamento dei dati personali</a>]]> secondo le norme del GDPR.</string>
    <string name="recover_email_sent">Email di reset inviata!</string>
    <string name="date_picker_title">Seleziona una data</string>
    <string name="add_categories_pref">Per avere un feed più coerente con i tuoi gusti ti consigliamo di scegliere le categorie di eventi che più t\'interessano. Potrai cambiarle in seguito nelle impostazioni profilo. </string>
    <string name="continue_text">Continua</string>
    <string name="skip_text">Salta</string>
    <string name="edit_profile_action">Modifica profilo</string>
    <string name="logout_action">Disconetti</string>
    <string name="search_action">Cerca eventi o utenti</string>
    <string name="search_empty_text">Il termine di ricerca non può essere vuoto.</string>
    <string name="search_users_not_found">Nessun utente trovato</string>
    <string name="search_events_not_found">Nessun evento trovato</string>
    <string name="user_info_friends">amicizie</string>
    <string name="user_info_created">creati</string>
    <string name="user_info_joined">partecipati</string>
    <string name="user_pref_button">I miei gusti</string>
    <string name="user_add_friendship">Aggiungi amico</string>
    <string name="user_remove_friendship">Rimuovi amico</string>
    <string name="user_cancel_pending_request">Annulla</string>
    <string name="user_confirm_frinedship">Accetta</string>
    <string name="user_deny_friendship">Rifiuta</string>
    <string name="user_confirm_friendship_text">Accetti la richiesta d\'amicizia?</string>
    <string name="profile_updated">Profilo aggiornato</string>
    <string name="unable_to_update_error">Impossibile aggiornare</string>
    <string name="create_event_or_post">Crea</string>
    <string name="create_event_modal">Crea evento</string>
    <string name="create_post_modal">Aggiungi post</string>
    <string name="event_not_exists">L\'evento non esiste</string>
    <string name="event_join_action">Partecipa</string>
    <string name="title_event_toolbar">Scheda evento</string>
    <string name="event_left">Libera posto</string>
    <string name="add_post_event">Aggiungi un post</string>
    <string name="work_active_warning_message">Operazione in corso. Terminare ora?</string>
    <string name="work_terminate">Termina</string>
    <string name="event_location_formatted">%1$s, %2$s</string>
    <string name="username_formatted">"@"%s</string>
    <string name="edit_event">Modifica</string>
    <string name="delete_event">Elimina evento</string>
    <string name="show_attendees">Partecipanti</string>
    <string name="event_restricted_text">Solo amici</string>
    <string name="event_open_text">Aperto a tutti</string>
    <string name="event_not_available">Nessun posto disponibile.</string>
    <string name="event_closed">Terminato.</string>
    <string name="distance_formatted">%d km</string>
    <string name="user_edited_success">Profilo aggiornato</string>
    <string name="values_already_updated">Il profilo è già aggiornato.</string>
    <string name="edit_preferences">Modifica i tuoi gusti</string>
    <string name="open_camera_action">Scatta una foto</string>
    <string name="open_gallery_image_action">Scegli un\'immagine</string>
    <string name="remove_user_image_action">Rimuovi immagine</string>
    <string name="post_not_exists">Il post richiesto non esiste.</string>
    <string name="image_cache_path_name">content_images</string>
    <string name="post_created_at_formatted">\u25CF  %s</string>
    <string name="post_carousel_counter"> %1$d/%2$d</string>
    <string name="pending_request_button">Richiesta inviata</string>
    <string name="comment_input_hint">Scrivi un commento…</string>
    <string name="comment_title_bottom_sheet">Commenti</string>
    <string name="warning_dialog_title">Attenzione</string>
    <string name="delete_post_dialog_text">Sei sicuro di voler eliminare questo post?</string>
    <string name="delete_event_dialog_text">Sei sicuro di voler eliminare questo evento?</string>
    <string name="event_deleted">Evento eliminato</string>
    <string name="add_post_title">Aggiungi post</string>
    <string name="add_post">Aggiungi post</string>
    <string name="select_images_post">Seleziona foto</string>
    <string name="post_added">Post aggiunto!</string>
    <string name="event_cannot_edit_warning">Non potrai modificare questo valore in seguito.</string>
    <string name="attendees_title_formatted">Partecipanti (%d) </string>
    <string name="dialog_delete_confirm">Elimina</string>
    <string name="dialog_abort">Annulla</string>
    <string name="comment_added">Commento aggiunto</string>
    <string name="info_dialog_confirm">Ho capito</string>
    <string name="info_dialog_title">Avviso</string>
    <string name="show_events_on_map">Mostra mappa eventi</string>
    <string name="pick_location_title">Posizione evento</string>
    <string name="event_created_message">Evento creato</string>
    <string name="event_edited_message">Evento modificato</string>
    <string name="select_location_button">Seleziona questa posizione</string>
    <string name="geo_added_form_event">Posizione aggiunta</string>
    <string name="event_image_empty">Immagine evento mancante!</string>
    <string name="compressed_image_failed">Formato immagine non supportato.</string>
    <string name="map_picker_message">Clicca sulla mappa per selezionare una posizione per l\'evento.</string>
    <string name="geo_message_warning">Per geolocalizzare l\'evento ti ricordiamo di modificare le coordinate geografiche cliccando su \"Modifica posizione\". La posizione di default corrisponde a quella del dispositivo.</string>
    <string name="location_failed_message">Non è stato possibile ottenere informazioni sulla tua posizione attuale pertanto ti verranno mostrati eventi in prossimità di una posizione di default corrispondente alla città di Roma.</string>
    <string name="event_terminated">Evento terminato</string>
    <string name="event_unavailable">Evento non disponibile</string>
    <string name="friendship_request_message"><![CDATA[<big><b>%s</b></big> vuole aggiungerti agli amici!]]></string>
    <plurals name="event_availability_warning">
        <item quantity="one">Resta solo %d posto disponibile!</item>
        <item quantity="other">Restano %d posti disponibili.</item>
    </plurals>
    <string name="alert_title_error">Errore</string>
    <string name="dialog_neutral_action">OK</string>
    <string name="internet_connection_lost">Connessione internet persa</string>
    <string name="internet_offline">Al momento non sei online</string>
    <string name="internet_online">Connesso a internet</string>
    <string name="firebaseAuthCollision">Email è già in uso.</string>
    <string name="firebaseAuthInvalidCredentials">Credenziali non valide</string>
    <string name="firebaseAuthInvalidUserException">L\'account richiesto non esiste.</string>
    <string name="firebaseAuthEmailException">L\'email inserita non è associata a nessun account Intouch</string>
    <string name="firebaseNetworkException">Errore di rete, riprova più tardi.</string>
    <string name="firebaseTooManyRequestsException">Blocco temporaneo per attività insolite</string>
    <string name="firebaseDefaultExceptionMessage">Errore interno! Contatta l\'assistenza</string>
    <string name="firebaseFirestoreException">Si è verificato un errore, riprova più tardi.</string>
    <string name="initFCMTokenException">Impossibile configurare l\'account, riprova più tardi.</string>
    <string name="firebaseLogoutException">Impossibile disconnettersi, controlla la connessione internet.</string>
    <string name="storageImageException">Errore di rete, non è stato possibile caricare l\'immagine</string>
    <string name="form_blank_fields">Compila tutti i campi</string>
    <string name="form_invalid_values">Dati inseriti non validi</string>
    <string name="invalid_argument">I valori inseriti non sono validi</string>
    <string name="permission_denied">Non hai i permessi per effettuare questa operazione</string>
    <string name="user_not_exists"> Utente non valido o non più esistente</string>
    <string name="invalid_username">Il nome utente deve contenere almeno 3 caratteri e sono ammessi solo lettere minuscole, numeri e . _</string>
</resources>