<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/feed_nav_ic"
        android:title="@string/feed_title" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search_title" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/add_event_title" />

    <item
        android:id="@+id/friendshipRequestsFragment"
        android:icon="@drawable/friendship_requests_ic_nav"
        android:title="@string/friendship_requests_title" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_nav_ic"
        android:title="@string/profile_title" />

</menu>