<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/showAttendeesMenuItem"
        android:title="@string/show_attendees"
        android:iconTint="@color/seed"
        android:icon="@drawable/baseline_group_24__black"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/editEventMenuItem"
        android:title="@string/edit_event"
        android:iconTint="@color/seed"
        android:icon="@drawable/baseline_edit_24"
        app:showAsAction="collapseActionView">
    </item>

    <item android:id="@+id/deleteEventMenuItem"
        android:title="@string/delete_event"
        android:iconTint="@color/seed"
        android:icon="@drawable/baseline_delete_24"
        app:showAsAction="collapseActionView">
    </item>
</menu>