<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.diegusmich.intouch.ui.fragments.feed.FeedFragment"
        android:label="@string/feed_title"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.diegusmich.intouch.ui.fragments.search.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.diegusmich.intouch.ui.fragments.notifications.NotificationFragment"
        android:label="@string/notifications_title"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.diegusmich.intouch.ui.fragments.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />

</navigation>