<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="20dp">

    <Button
        android:id="@+id/createEventModal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="14dp"
        android:text="@string/create_event_modal"
        android:textSize="18sp"
        style="@style/Widget.Material3.Button"/>

    <TextView
        android:id="@+id/text_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="12sp" />

    <Button
        android:id="@+id/createPostModal"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingVertical="14dp"
        android:text="@string/create_post_modal"
        android:textSize="18sp" />
</androidx.appcompat.widget.LinearLayoutCompat>