<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <com.diegusmich.intouch.ui.views.GlideImageView
            android:id="@+id/profileImagePreview"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerCircle"
            app:placeholder="@drawable/user_placeholder"/>

        <com.diegusmich.intouch.ui.views.GlideImageView
            android:id="@+id/profileImagePreviewOverlay"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerCircle"
            app:srcCompat="@drawable/event_cover_overlay"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"/>
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openCameraButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:icon="@drawable/baseline_camera_24"
        app:iconSize="26dp"
        app:iconPadding="10dp"
        android:textAlignment="textStart"
        android:text="@string/open_camera_action"
        style="@style/Widget.Material3.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openGalleryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:iconPadding="10dp"
        app:icon="@drawable/baseline_image_24"
        app:iconSize="26dp"
        android:textAlignment="textStart"
        android:text="@string/open_gallery_image_action"
        style="@style/Widget.Material3.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:icon="@drawable/baseline_delete_24"
        app:iconSize="26dp"
        android:textColor="@color/design_default_color_error"
        app:iconTint="@color/design_default_color_error"
        app:iconPadding="10dp"
        android:textAlignment="textStart"
        android:text="@string/remove_user_image_action"
        style="@style/Widget.Material3.Button.TextButton"/>
</androidx.appcompat.widget.LinearLayoutCompat>